# RelativisticScatteringSimulation

./: LICENSE  README.md  main.py  pyproject.toml  requirements.txt  setup.cfg  setup.py  tox.ini
rss/data/: PDF_raw_data.db
rss/examples/: __init__.py  lepton_lepton.py  measure_PDFs_from_DIS.py  measure_truth_level_PDFs.py  proton_proton.py
rss/src/: RSScomposite.py  RSSconstants.py  RSSfundamental.py  RSSmeasurement_suite.py  RSSmediator.py  RSSsql.py  RSSsystem.py  RSSvectors.py
rss/subpackage_licenses/: pylorentz.license
rss/tests/: test_RSSmom4.py  test_RSSpos4.py
