[metadata]
name = RelativisticScatteringSimulation
description = A package for simulating relativistic toy models for scattering experiments
author = Matt Inglis-Whalen
license = MIT
platforms = win32, unix, linux
classifiers =
    Programming Language :: Python :: 3.9

[options]
packages =
    rss
install_requires =
    vpython>=7
python_requires =
    >= 3.9
safe_zip = no

[options.extras_require]
testing =
    pytest >= 6.0
    pytest-cov >= 2.0
    mypy >= 0.910
    flake8 >= 3.9
    tox >= 3.24

[options.package_data]
rss = py.typed

[flake8]
max-line-length = 160

